Fixed clipping of title in experience section

--- a/src/styles/experience.css
+++ b/src/styles/experience.css
@@ -13,7 +13,6 @@
     a {
       text-decoration: none;
       font-weight: bold;
-      white-space: nowrap;
       
       /* img {
 
